[gd_scene load_steps=20 format=3 uid="uid://b0r2p7qgcorhd"]

[ext_resource type="Shader" path="res://Shaders/color.gdshader" id="1_21qpw"]
[ext_resource type="Script" path="res://Scripts/Tower/farmer.gd" id="2_knww6"]
[ext_resource type="Texture2D" uid="uid://cfqqw2h5276nm" path="res://Textures/Towers/Banker.png" id="3_dj7rv"]
[ext_resource type="AudioStream" uid="uid://cdf5s726adlkm" path="res://Audio/Effects/FarmerSpawn.mp3" id="4_o65bf"]
[ext_resource type="AudioStream" uid="uid://btmuxdox16fcu" path="res://Audio/Effects/FarmerCoin.wav" id="5_x7kgo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2770h"]
resource_local_to_scene = true
render_priority = 1
shader = ExtResource("1_21qpw")
shader_parameter/active = true
shader_parameter/flash_color = Color(1, 0.647059, 0, 1)
shader_parameter/opacity = 0.0
shader_parameter/tex = ExtResource("3_dj7rv")

[sub_resource type="AtlasTexture" id="AtlasTexture_8nkrk"]
atlas = ExtResource("3_dj7rv")
region = Rect2(0, 225, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8alxo"]
atlas = ExtResource("3_dj7rv")
region = Rect2(250, 225, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2r8s"]
atlas = ExtResource("3_dj7rv")
region = Rect2(0, 25, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lskkj"]
atlas = ExtResource("3_dj7rv")
region = Rect2(250, 25, 250, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_0mrvf"]
animations = [{
"frames": [{
"duration": 2.2,
"texture": SubResource("AtlasTexture_8nkrk")
}, {
"duration": 2.2,
"texture": SubResource("AtlasTexture_8alxo")
}],
"loop": true,
"name": &"Attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_j2r8s")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_lskkj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_fsyow"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rrefv"]
size = Vector3(4.9, 0.25, 4.9)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uqrth"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73d65"]
bg_color = Color(0.752941, 0.266667, 0.266667, 1)
border_width_bottom = 3
border_color = Color(0.496103, 0.152412, 0.155195, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijshl"]
bg_color = Color(1.39579e-06, 0.73793, 0.390966, 1)
border_width_bottom = 3
border_color = Color(8.0619e-07, 0.424344, 0.215547, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_bottom = 3.0

[sub_resource type="ViewportTexture" id="ViewportTexture_j3qvo"]
viewport_path = NodePath("HealthBar/SubViewport")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kcs3n"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("4_o65bf")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_r3qmj"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("5_x7kgo")

[node name="Farmer" type="AnimatedSprite3D" groups=["Tower"]]
material_overlay = SubResource("ShaderMaterial_2770h")
offset = Vector2(0, 50)
pixel_size = 0.006
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_0mrvf")
animation = &"Attacking"
frame_progress = 0.885153
script = ExtResource("2_knww6")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HitboxArea" type="Area3D" parent="."]

[node name="Hitbox" type="CollisionShape3D" parent="HitboxArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_fsyow")

[node name="AttackArea" type="Area3D" parent="."]
visible = false
collision_layer = 2
monitorable = false

[node name="AttackBox" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_rrefv")

[node name="HealthBar" type="Node3D" parent="."]

[node name="SubViewport" type="SubViewport" parent="HealthBar"]
transparent_bg = true
size = Vector2i(128, 32)

[node name="Panel" type="Panel" parent="HealthBar/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_uqrth")

[node name="Health" type="ProgressBar" parent="HealthBar/SubViewport/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_73d65")
theme_override_styles/fill = SubResource("StyleBoxFlat_ijshl")
value = 50.0

[node name="DisplayHealth" type="Sprite3D" parent="HealthBar"]
offset = Vector2(0, 100)
billboard = 1
texture_filter = 0
texture = SubResource("ViewportTexture_j3qvo")

[node name="FarmerSpawn" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_kcs3n")
bus = &"SFX"

[node name="FarmerCoin" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_r3qmj")
volume_db = -10.127
bus = &"SFX"

[connection signal="timeout" from="AttackTimer" to="." method="_on_timer_timeout"]
